--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <div class="flex items-center space-x-4">
                 <div class="flex items-center">
-                    <img src="assets/img/logo-fundetec.png" alt="FUNDETEC Logo" class="h-10 w-auto rounded-full">
-                    <img src="assets/img/logo-powerbi.png" alt="Power BI Logo" class="h-10 w-auto rounded-full ml-2">
+                    <img src="assets/img/logos/logo-fundetec.png" alt="FUNDETEC Logo" class="h-10 w-auto rounded-full">
+                    <img src="assets/img/logos/logo-powerbi.png" alt="Power BI Logo" class="h-10 w-auto rounded-full ml-2">
                 </div>
                 <h1 class="text-xl font-bold">Taller Power BI</h1>
             </div>
@@ -108,7 +108,7 @@
                 <div class="profile-card-inner">
                     <div class="profile-card-front bg-gradient-to-br from-blue-900 to-blue-700 text-white p-6">
                         <div class="flex flex-col items-center text-center">
-                            <img src="assets/img/facilitator.jpg" alt="Ing. Alexander Oviedo Fadul" class="h-32 w-32 rounded-full border-4 border-yellow-400 mb-4">
+                            <img src="assets/img/profiles/facilitator.jpg" alt="Ing. Alexander Oviedo Fadul" class="h-32 w-32 rounded-full border-4 border-yellow-400 mb-4">
                             <h3 class="text-xl font-bold">Ing. Alexander Oviedo Fadul</h3>
                             <p class="text-yellow-300">Especialista en Big Data & BI</p>
                             <p class="text-sm mt-4">Haz clic o pasa el mouse para ver más información</p>
@@ -296,7 +296,7 @@
     <footer class="bg-blue-800 text-white p-4 mt-8">
         <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
             <div class="flex items-center mb-4 md:mb-0">
-                <img src="assets/img/logo-fundetec.png" alt="FUNDETEC Logo" class="h-8 w-auto mr-2">
+                <img src="assets/img/logos/logo-fundetec.png" alt="FUNDETEC Logo" class="h-8 w-auto mr-2">
                 <span class="text-sm">© 2025 FUNDETEC - Ing. Alexander Oviedo Fadul</span>
             </div>
             <div class="flex space-x-4">
@@ -329,7 +329,7 @@
             <div class="p-6">
                 <div class="flex flex-col md:flex-row gap-6">
                     <div class="md:w-1/3">
-                        <img src="assets/img/facilitator.jpg" alt="Ing. Alexander Oviedo Fadul" class="w-full rounded-lg shadow-md">
+                        <img src="assets/img/profiles/facilitator.jpg" alt="Ing. Alexander Oviedo Fadul" class="w-full rounded-lg shadow-md">
                     </div>
                     <div class="md:w-2/3">
                         <h4 class="text-xl font-bold text-blue-900 mb-2">Ing. Alexander Oviedo Fadul</h4>
