Actualizar scripts de JavaScript y archivos de prueba

--- a/index.html
+++ b/index.html
@@ -416,6 +416,8 @@
     <script src="components/step-navigator.js"></script>
     <script src="components/interactive-elements.js"></script>
     <script src="js/modules.js"></script>
+    <script src="js/content-config.js"></script>
+    <script src="js/markdown-loader.js"></script>
     <script src="js/module-intro.js"></script>
     <script src="js/module-transform.js"></script>
     <script src="js/module-renderer.js"></script>
