Actualización de links

--- a/index.html
+++ b/index.html
@@ -273,15 +273,15 @@
                 <span class="text-sm">© 2025 FUNDETEC - Ing. Alexander Oviedo Fadul</span>
             </div>
             <div class="flex space-x-4">
-                <button class="text-white hover:text-yellow-300 text-sm">
+                <a href="https://www.alexanderoviedofadul.dev/" target="_blank" class="text-white hover:text-yellow-300 text-sm">
                     Contacto
-                </button>
-                <button class="text-white hover:text-yellow-300 text-sm">
+                </a>
+                <a href="sitios_referencia.html" target="_blank" class="text-white hover:text-yellow-300 text-sm">
                     Recursos
-                </button>
-                <button class="text-white hover:text-yellow-300 text-sm">
+                </a>
+                <a href="https://fundetec.edu.co/" target="_blank" class="text-white hover:text-yellow-300 text-sm">
                     Certificación
-                </button>
+                </a>
             </div>
         </div>
     </footer>
