--- a/sitios_referencia.html
+++ b/sitios_referencia.html
@@ -286,8 +286,8 @@
                 category: 'blogs'
             },
             {
-                url: 'https://www.blue-granite.com/blog/power-bi-best-practices-for-creating-reports-and-dashboards',
-                title: 'Blue Granite - Mejores prácticas',
+                url: 'https://we-educacion.com/blog-mejores-practicas-optimizar-dashboards-en-power-bi',
+                title: 'we-educacion - Mejores prácticas',
                 description: 'Consejos para crear dashboards efectivos.',
                 category: 'blogs'
             },
@@ -574,7 +574,18 @@
                 title: 'GitHub - Project Templates',
                 description: 'Plantillas para Microsoft Project Online y Project for the Web.',
                 category: 'plantillas'
-            }
+            },
+            {
+                url: 'https://github.com/microsoft/powerbi-desktop-samples',
+                title: 'GitHub - Microsoft Power BI Desktop Samples',
+                description: 'Repositorio oficial de Microsoft con archivos PBIX de muestra incluyendo Sales & Returns, y otros reportes para explorar funcionalidades de Power BI.',
+                category: 'plantillas'
+            },
+            {
+                url: 'https://github.com/microsoft/powerbi-desktop-samples/blob/main/Sample%20Reports/Sales%20%26%20Returns%20Sample%20v201912.pbix',
+                title: 'GitHub - Sales & Returns Sample',
+                description: 'Plantilla oficial de Microsoft para análisis de ventas y devoluciones con patinetas temáticas. Incluye drill-through, What-if analysis, Power Apps visual y optimización móvil.',
+                category: 'plantillas'}
         ];
 
         // Videos instructivos
